--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Default template for PDM package"
 authors = [
     {name = "Aleksandr Danilenko", email = "rorik302@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "podman-compose>=1.0.6",
+]
 requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
