chore: старт приложения

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "podman-compose>=1.0.6",
+    "litestar[standard]>=2.6.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
