--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "litestar[pydantic,sqlalchemy,standard]>=2.6.0",
     "asyncpg>=0.29.0",
     "argon2-cffi>=23.1.0",
+    "pyjwt[crypto]>=2.8.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
