--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "asyncpg>=0.29.0",
     "argon2-cffi>=23.1.0",
     "pyjwt[crypto]>=2.8.0",
+    "redis>=5.0.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
